--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -11,8 +11,9 @@ Globals
 
 // Site variable
 $color: #242424;
-$background-color: #46842f;
+$background-color: #fff698;
 $accent-color: #fff;
+$accent-color2: #061845;
 $gutters: 20px;
 
 
